--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
 
     <packaging>war</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <finalName>test_servlet</finalName>
